# DiffusionLLMThing

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh  train.py
configs/: default.yaml  test.yaml
diffusionllm/: __init__.py  config.py  data.py  diffusion.py  model.py  sampling.py  tokenizer.py  utils.py
scripts/: chat.py  download_data.py  evaluate.py  prepare_data.py  sample.py  server.py  train.py
tests/: __init__.py  conftest.py  test_diffusion.py  test_model.py  test_sampling.py  test_training.py  test_utils.py
